fixed sizing overflow

--- a/packages/select/src/mwc-select.scss
+++ b/packages/select/src/mwc-select.scss
@@ -27,7 +27,10 @@ limitations under the License.
 
 .mdc-select .mdc-select__anchor {
   display: block;
-  overflow: hidden;
+
+  .mdc-select__selected-text {
+    overflow: hidden;
+  }
 
   * {
     display: inline-flex;
